--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	body {
+		@apply h-screen;
+	}
+}
+
+@layer components {
+	.btn-blue {
+		@apply bg-dark-blue hover:bg-light-blue text-white text-xs font-medium py-2 px-2 rounded;
+	}
+}
